ADEN-11073 change UAP z-index to fix navigation viewability

--- a/platforms/shared/styles/uap/_bfaa-sticky-resolved.scss
+++ b/platforms/shared/styles/uap/_bfaa-sticky-resolved.scss
@@ -1,5 +1,7 @@
+@import 'src/ad-products/styles/uap-variables';
+
 @mixin bfaa-sticky-small() {
-	z-index: 202;
+	z-index: $new-uap-z-index;
 	&.bfaa-sticky-small {
 		#top_leaderboard {
 			.video-player.porvata-player {
