--- a/platforms/shared/styles/uap/_bfab-slot.scss
+++ b/platforms/shared/styles/uap/_bfab-slot.scss
@@ -1,7 +1,7 @@
 @import 'src/ad-products/styles/mixin';
 
 @mixin bfab-slot() {
-	z-index: 201;
+	z-index: 198;
 	position: relative;
 
 	@include bfaa-bfab-overlay;
