--- a/src/ad-products/styles/_uap-variables.scss
+++ b/src/ad-products/styles/_uap-variables.scss
@@ -14,6 +14,7 @@ $uap-replay-overlay-color: rgba(0, 0, 0, 0.3);
 $uap-video-animation-duration: 0.4s;
 $uap-video-animation-long-duration: 0.6s;
 $uap-video-z-index: 100;
+$new-uap-z-index: 199;
 $uap-video-fullscreen-z-index: 2147483647;
 
 $hivi-uap-dark-button-color: #9d9d9d;
